# one-prompt-agents

./: .gitignore  AGENT_BUILDING_GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
agents_config/EchoAgent/: config.json  prompt.txt  return_type.py
agents_config/GreeterAgent/: config.json  prompt.md  return_type.py
agents_config/MainAgent/: config.json  prompt.md  return_type.py
agents_config/test_echo_agent/: config.json  prompt.md  return_type.py  test_scenario_echo.json  test_scenario_echo_no_wait.json
agents_config/test_scenario_runner_agent/: config.json  prompt.md  return_type.py
agents_config/test_wait_for_multiple_jobs/: config.json  prompt.txt  return_type.py
customer-toolkit/: README.md  appspec.yml  config.json.template  deploy.py  requirements.txt
customer-toolkit/scripts/: after_install.sh  before_install.sh  start_app.sh  stop_app.sh
docs/guides/: deploy-my-email-agent.md  filesystem-agent.md  filesystem-autonomous.md  getting-started.md  mcp-howto.md  mongo-db-agent.md  start-and-wait-for-agent.md  webscrapping-autonomous.md  webscrapping-with-apify.md
mcp_servers/: job_status_mcp_server.py  testing_mcp_server.py  wait_for_jobs_mcp_server.py
src/one_prompt_agents/: agents_loader.py  api.py  chat_patterns.py  chat_utils.py  cli.py  core_chat.py  http_start.py  logging_setup.py  main.py  mcp_agent.py  mcp_servers_loader.py  mcp_setup.py  strategies.py  (+1 more)
tests/: test_agents_loader.py  test_api.py  test_chat_utils.py  test_cli.py  test_core_chat.py  test_example.py  test_http_start.py  test_utils.py
(+35 files in other folders)
