[project]
name = "one-prompt-agents"
version = "0.0.1"
description = "A small Framework built on top of openai agents sdk to develop one prompt autonomous agents"
authors = [{ name = "Ivan Postolski", email = "ivan.postolski@gmail.com" }]
dependencies = ["uvicorn==0.34.2", "pydantic==2.11.4", "fastmcp==2.3.4", "openai-agents==0.0.14", "fastapi==0.115.12"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
run_agent = "one_prompt_agents.main:main"
run_server = "one_prompt_agents.main:run_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
